--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,7 @@ body {
 }
 
 iframe {
-  outline: none;
+  outline: none!important;
 }
 
 ol,
@@ -69,14 +69,26 @@ a {
   color: var(--darkblue);
 }
 
-body {
-  background-color: var(--white);
+body {background-color: var(--white);
 }
 
 p {
-  color:var(--white)
+  color: var(--white)
 }
 
+.parallax-bg {
+  background-image: url('../../public/assets/bg.jpg');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.blur {
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(8px);
+  height: 100vh;
+  width: 50%;
+}
 /*    NAVBAR    */
 .logo-navbar {
   max-width: 15em;
@@ -130,6 +142,9 @@ p {
 .negativo {
   color:rgb(167, 0, 0)
 }
+h3 {
+  margin:0!important;
+}
 /*    ABOUT SECTION   */
 .title-about {
   text-align: center;
@@ -140,7 +155,6 @@ p {
 .about-text div p {
   color: #222b38;
 }
-
 
 /*    LINKS UTILES    */
 .links-utiles{
@@ -192,6 +206,15 @@ p {
   text-shadow: 0px 2px 3px var(--darkblue);
 }
 
+/*    MATERIAL NOTAS HOME   */
+.img-btn {
+  max-width: 10rem;
+  width: auto;
+  aspect-ratio: 1;
+}
+.bg-degrade{
+  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, var(--blue) 100%);
+}
 
 
 
